objects/PC_REST_Field_Mapping__mdt.object
<CustomObject>
    <description>Used to map RESTAPI field names against the sObject field names</description>
    <fields>
        <fullName>PC_Other_REST_Object_Name__c</fullName>
        <description>To have the rest object name for respective salesforce objects in this org, when it Rest Object Name = Other</description>
        <inlineHelpText>If Rest Object Name = Other, this value is required.</inlineHelpText>
        <label>Other REST Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Other_sObject_API_Name__c</fullName>
        <description>API name of the sObject present in this organization.</description>
        <inlineHelpText>sObject API name for Other Rest Object</inlineHelpText>
        <label>Other sObject API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_REST_Field_Name__c</fullName>
        <description>REST field name</description>
        <label>REST Field Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_REST_Object_Name__c</fullName>
        <label>REST Object Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient</fullName>
                    <default>true</default>
                    <label>Patient</label>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>HealthPlan</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>EngagementProgram</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Applicant/Address</fullName>
                </value>
                <value>
                    <fullName>Applicant/HealthPlan</fullName>
                </value>
                <value>
                    <fullName>Applicant/HCO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>OrderItem</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Interaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_sObject_Field_Name__c</fullName>
        <label>sObject Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>REST Field Mapping</label>
    <pluralLabel>REST Field Mappings</pluralLabel>
    <validationRules>
        <fullName>PC_OtherRestObjectNameIsBlank</fullName>
        <active>true</active>
        <description>If Other Rest Object Name  is blank and Rest Object Name = Other</description>
        <errorConditionFormula>AND(
    ISPICKVAL(PC_REST_Object_Name__c, &apos;Other&apos;),
    ISBLANK(PC_Other_REST_Object_Name__c) 
)</errorConditionFormula>
        <errorDisplayField>PC_Other_REST_Object_Name__c</errorDisplayField>
        <errorMessage>Please provide the value.</errorMessage>
    </validationRules>
</CustomObject>